--- a/TestingEz/src/main/resources/templates/test-create.html
+++ b/TestingEz/src/main/resources/templates/test-create.html
@@ -6,7 +6,7 @@
     <div th:replace="~{fragments/headers :: header}"></div>
 
     <main class="d-flex align-items-center flex-grow-1">
-        <div class="container bg-secondary border border-2 border-black rounded shadow text-white fs-4 p-3">
+        <div class="container bg-light border border-2 rounded shadow fs-4 p-3">
             <form
                     action="#"
                     class="needs-validation"
@@ -22,7 +22,7 @@
                     <div class="col">
                         <div class="input-group has-validation">
                             <input
-                                    class="form-control border border-black shadow fs-5"
+                                    class="form-control border fs-5"
                                     id="name"
                                     maxlength="25"
                                     minlength="5"
@@ -33,7 +33,7 @@
                                     type="text"
                             />
                         </div>
-                        <div class="text-warning fs-6"
+                        <div class="text-danger fs-6"
                              th:errors="*{name}"
                              th:if="${#fields.hasErrors('name')}">
                         </div>
@@ -46,7 +46,7 @@
                     <div class="col">
                         <div class="input-group has-validation">
                             <input
-                                    class="form-control border border-black fs-5"
+                                    class="form-control border fs-5"
                                     id="description"
                                     maxlength="50"
                                     name="description"
@@ -56,7 +56,7 @@
                                     type="text"
                             />
                         </div>
-                        <div class="text-warning fs-6"
+                        <div class="text-danger fs-6"
                              th:errors="*{description}"
                              th:if="${#fields.hasErrors('description')}">
                         </div>
@@ -69,7 +69,7 @@
                     <div class="col">
                         <div class="input-group has-validation gap-1">
                             <input
-                                    class="form-control border border-black fs-5"
+                                    class="form-control border fs-5"
                                     id="code"
                                     name="code"
                                     pattern="^(?=.*[A-Za-z].*[A-Za-z])(?=.*\d.*\d)(?=.*[!@#$%^&*].*[!@#$%^&*])[A-Za-z\d!@#$%^&*]{6}$"
@@ -78,14 +78,14 @@
                                     th:field="*{code}"
                                     type="text"
                             />
-                            <button class="btn bg-light text-black border border-black border-2 shadow rounded fs-5"
+                            <button class="btn bg-light border border-2 rounded fs-5"
                                     onclick="generateCode()"
                                     type="button"
                                     th:text="#{generate}">
                                 generate
                             </button>
                         </div>
-                        <div class="text-warning fs-6"
+                        <div class="text-danger fs-6"
                              th:errors="*{code}"
                              th:if="${#fields.hasErrors('code')}">
                         </div>
@@ -100,7 +100,7 @@
                     <div class="col">
                         <div class="input-group has-validation">
                             <input
-                                    class="form-control border border-black fs-5"
+                                    class="form-control border fs-5"
                                     id="responseTime"
                                     name="responseTime"
                                     th:placeholder="#{inMinutes}"
@@ -110,7 +110,7 @@
                                     type="number"
                             />
                         </div>
-                        <div class="text-warning fs-6"
+                        <div class="text-danger fs-6"
                              th:errors="*{responseTime}"
                              th:if="${#fields.hasErrors('responseTime')}">
                         </div>
@@ -125,7 +125,7 @@
                     <div class="col">
                         <div class="input-group has-validation">
                             <input
-                                    class="form-control border border-black fs-5"
+                                    class="form-control border fs-5"
                                     id="passingScore"
                                     name="passingScore"
                                     th:classappend="${#fields.hasErrors('passingScore')} ? 'is-invalid' : ''"
@@ -133,7 +133,7 @@
                                     type="number"
                             />
                         </div>
-                        <div class="text-warning fs-6"
+                        <div class="text-danger fs-6"
                              th:errors="*{passingScore}"
                              th:if="${#fields.hasErrors('passingScore')}">
                         </div>
@@ -148,7 +148,7 @@
                     <div class="col">
                         <div class="input-group has-validation">
                             <input
-                                    class="form-control border border-black fs-5"
+                                    class="form-control border fs-5"
                                     id="questionsCount"
                                     name="questionsCount"
                                     required
@@ -157,7 +157,7 @@
                                     type="number"
                             />
                         </div>
-                        <div class="text-warning fs-6"
+                        <div class="text-danger fs-6"
                              th:errors="*{questionsCount}"
                              th:if="${#fields.hasErrors('questionsCount')}">
                         </div>
@@ -172,7 +172,7 @@
                     <div class="col">
                         <div class="input-group has-validation">
                             <input
-                                    class="form-control border border-black fs-5"
+                                    class="form-control border fs-5"
                                     id="status"
                                     name="status"
                                     th:placeholder="#{openClosed}"
@@ -182,7 +182,7 @@
                                     type="text"
                             />
                         </div>
-                        <div class="text-warning fs-6"
+                        <div class="text-danger fs-6"
                              th:errors="*{status}"
                              th:if="${#fields.hasErrors('status')}">
                         </div>
@@ -191,7 +191,7 @@
                 <div class="row">
                     <div class="col text-center">
                         <button type="submit"
-                                class="btn bg-light text-black border border-black border-2 shadow rounded fs-5 px-5 mt-3"
+                                class="btn bg-light border border-2 rounded fs-5 px-5 mt-3"
                                 th:text="#{next}">
                             next
                         </button>
@@ -203,6 +203,10 @@
 
     <div th:replace="~{fragments/footers :: footer}"></div>
 </div>
+<script
+        type="module"
+        src="https://cdn.jsdelivr.net/npm/@bufferhead/nightowl@0.0.14/dist/nightowl.js"
+></script>
 <script src="/js/code-generator.js"></script>
 <div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
